force-app/main/default/objects/HL_Subscription__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>This is the subject of the email. This will override the subject on the distribution list.</description>
    <inlineHelpText>This is the subject of the email. This will override the subject on the distribution list.</inlineHelpText>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>