force-app/main/default/objects/HL_Subscription__c/fields/Subscriber__c.field-meta.xml
<CustomField>
    <fullName>Subscriber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the email recipient or the user that the security is applied to.</description>
    <inlineHelpText>This is the email recipient or the user that the security is applied to.</inlineHelpText>
    <label>Subscriber</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>Only HL Employees and Disribution Lists can be added to Subscriptions.</errorMessage>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Houlihan_Employee</value>
        </filterItems>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Distribution_Lists</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>HL Subscriptions (Subscriber)</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>