force-app/main/default/objects/HL_Subscription__c/fields/Subscription_Attach_Excel__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Attach_Excel__c</fullName>
    <description>This indicates if the report is attached to the email as Excel. This can be overridden by the Attach Excel setting on HL Subscription.</description>
    <formula>Subscription_Distribution_List__r.Attach_Excel__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This indicates if the report is attached to the email as Excel. This can be overridden by the Attach Excel setting on HL Subscription.</inlineHelpText>
    <label>Subscription Attach Excel</label>
    <type>Checkbox</type>
</CustomField>