force-app/main/default/objects/HL_Subscription__c/fields/Subscription_Distribution_List__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Distribution_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the notification/security.</description>
    <inlineHelpText>This is the notification/security.</inlineHelpText>
    <label>Subscription  Distribution List</label>
    <referenceTo>Subscription_Distribution_List__c</referenceTo>
    <relationshipLabel>HL Subscriptions</relationshipLabel>
    <relationshipName>HL_Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>