force-app/main/default/objects/HL_Subscription__c/fields/Subscription_Reply_To__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Reply_To__c</fullName>
    <description>This is the defailt reply to for the email. This can be overridden by the Reply To on the HL Subscription.</description>
    <formula>Subscription_Distribution_List__r.Reply_To__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the default reply to for the email. This can be overridden by the Reply To on the HL Subscription.</inlineHelpText>
    <label>Subscription Reply To</label>
    <type>Text</type>
</CustomField>