force-app/main/default/objects/HL_Subscription__c/fields/Subscription_Sender__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Sender__c</fullName>
    <description>This is the default sender for the email. This can be overridden by the sender on the HL Subscription.</description>
    <formula>Sender__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the default sender for the email. This can be overridden by the sender on the HL Subscription.</inlineHelpText>
    <label>Subscription Sender</label>
    <type>Text</type>
</CustomField>