force-app/main/default/objects/HL_Subscription__c/fields/Subscription_Subject__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Subject__c</fullName>
    <description>This is the default subject for the subscription from Subscription Distribution List. This can be overridden by the subject on HL Subscription.</description>
    <formula>Subscription_Distribution_List__r.Subject__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the default subject for the subscription from Subscription Distribution List. This can be overridden by the subject on HL Subscription.</inlineHelpText>
    <label>Subscription Subject</label>
    <type>Text</type>
</CustomField>