force-app/main/default/objects/HL_Subscription__c/fields/Subscription_Type__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Type__c</fullName>
    <description>HL Subscription is used for the email notifications/security or the report access in CRM.</description>
    <inlineHelpText>HL Subscription is used for the email notifications/security or the report access in CRM.</inlineHelpText>
    <label>Subscription Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individual Subscriber</fullName>
            </value>
            <value>
                <fullName>Outlook Distribution Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>