force-app/main/default/objects/HL_Subscription__c/fields/TableauReport__c.field-meta.xml
<CustomField>
    <fullName>TableauReport__c</fullName>
    <description>This formula will check to see if the subscription record is linked to a report link record and if so, is the field, &quot;Is tableau&quot; checked.  If it is checked, then it returns &quot;Yes&quot;, else it returns &quot;No&quot;.</description>
    <formula>IF(
NOT(ISBLANK(HL_Report_Link__c)) &amp;&amp;
HL_Report_Link__r.IsTableau__c,
&quot;Yes&quot;,
&quot;No&quot;)</formula>
    <label>Tableau Report?</label>
    <type>Text</type>
</CustomField>