force-app/main/default/objects/HL_Subscription__c/recordTypes/Report_Security_Assignment.recordType-meta.xml
<RecordType>
    <fullName>Report_Security_Assignment</fullName>
    <active>true</active>
    <label>Report Security Assignment</label>
</RecordType>