force-app/main/default/objects/HL_Subscription__c/listViews/Activity_Notification.listView-meta.xml
<ListView>
    <fullName>Activity_Notification</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Distribution_List__c</columns>
    <columns>Subscriber__c</columns>
    <columns>Sender__c</columns>
    <columns>Industry_Group__c</columns>
    <columns>Industry_Umbrella__c</columns>
    <columns>Line_of_Business__c</columns>
    <columns>Office__c</columns>
    <columns>Ownership__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Reply_To__c</columns>
    <columns>Subject__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Distribution_List__c</field>
        <operation>equals</operation>
        <value>Activity Notification</value>
    </filters>
    <label>Activity Notification</label>
</ListView>