force-app/main/default/objects/HL_Subscription__c/listViews/ASC_Dashboard.listView-meta.xml
<ListView>
    <fullName>ASC_Dashboard</fullName>
    <columns>Membership_Driven_Filter__c</columns>
    <columns>NAME</columns>
    <columns>HL_Report_Link__c</columns>
    <columns>Subscriber__c</columns>
    <columns>Active__c</columns>
    <columns>Industry_Group__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HL_Report_Link__c</field>
        <operation>equals</operation>
        <value>Augmented Sector Coverage Dashboard</value>
    </filters>
    <label>ASC Dashboard</label>
</ListView>