force-app/main/default/objects/HL_Subscription__c/listViews/ASC_Monthly_Coverage_Notification.listView-meta.xml
<ListView>
    <fullName>ASC_Monthly_Coverage_Notification</fullName>
    <columns>Membership_Driven_Filter__c</columns>
    <columns>NAME</columns>
    <columns>Subscription_Distribution_List__c</columns>
    <columns>Subscriber__c</columns>
    <columns>Industry_Group__c</columns>
    <columns>Active__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Subscription_Distribution_List__c</field>
        <operation>equals</operation>
        <value>ASC Monthly Coverage Notification</value>
    </filters>
    <label>ASC Monthly Coverage Notification</label>
</ListView>