force-app/main/default/objects/HL_Subscription__c/listViews/ASC_Weekly_Coverage_Notification_by_Sect.listView-meta.xml
<ListView>
    <fullName>ASC_Weekly_Coverage_Notification_by_Sect</fullName>
    <booleanFilter>(1 OR 2)</booleanFilter>
    <columns>Membership_Driven_Filter__c</columns>
    <columns>NAME</columns>
    <columns>Subscription_Distribution_List__c</columns>
    <columns>Subscriber__c</columns>
    <columns>Industry_Group__c</columns>
    <columns>Sector__c</columns>
    <columns>Active__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Subscription_Distribution_List__c</field>
        <operation>contains</operation>
        <value>Sector</value>
    </filters>
    <filters>
        <field>Subscription_Distribution_List__c</field>
        <operation>equals</operation>
        <value>ASC Weekly Coverage Notification</value>
    </filters>
    <label>ASC Weekly Coverage Notification</label>
</ListView>