force-app/main/default/objects/HL_Subscription__c/listViews/CA_Exception_Reports.listView-meta.xml
<ListView>
    <fullName>CA_Exception_Reports</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Distribution_List__c</columns>
    <columns>Line_of_Business__c</columns>
    <columns>Subscriber__c</columns>
    <columns>Sender__c</columns>
    <columns>Subject__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Distribution_List__c</field>
        <operation>equals</operation>
        <value>CA Exception Report</value>
    </filters>
    <label>CA Exception Reports</label>
</ListView>