force-app/main/default/objects/HL_Subscription__c/listViews/CF_Consolidated_Group_Head.listView-meta.xml
<ListView>
    <fullName>CF_Consolidated_Group_Head</fullName>
    <columns>NAME</columns>
    <columns>Distribution_List__c</columns>
    <columns>HL_Report_Link__c</columns>
    <columns>Subscriber__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HL_Report_Link__c</field>
        <operation>equals</operation>
        <value>CF Consolidated Dashboard</value>
    </filters>
    <label>CF Consolidated Group Head</label>
</ListView>