force-app/main/default/objects/HL_Subscription__c/listViews/Early_Look_Final_Report_Email1.listView-meta.xml
<ListView>
    <fullName>Early_Look_Final_Report_Email1</fullName>
    <columns>NAME</columns>
    <columns>Distribution_List__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Subscriber__c</columns>
    <columns>Active__c</columns>
    <columns>Line_of_Business__c</columns>
    <columns>Industry_Group__c</columns>
    <columns>Industry_Umbrella__c</columns>
    <columns>Office__c</columns>
    <columns>Subject__c</columns>
    <columns>Custom_Sort_Order__c</columns>
    <columns>Subscription_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Distribution_List__c</field>
        <operation>equals</operation>
        <value>Early Look - Final Report Email</value>
    </filters>
    <label>Early Look - Final Report Email</label>
</ListView>